LayoutTests/http/tests/eventsource/resources/response-content-type-charset.php
@@ -11,3 +11,4 @@ header("Content-Type: $contentType");
 id: 77
 retry: 300
 data: hello
+
